include $(top_srcdir)/Makefile.am.common

lib_LTLIBRARIES = libstatsite.la

libstatsite_la_SOURCES = MurmurHash3.c
libstatsite_la_SOURCES += cm_quantile.c
libstatsite_la_SOURCES += config.c
libstatsite_la_SOURCES += counter.c
libstatsite_la_SOURCES += hashmap.c
libstatsite_la_SOURCES += heap.c
libstatsite_la_SOURCES += hll.c
libstatsite_la_SOURCES += hll_constants.c
libstatsite_la_SOURCES += ini.c
libstatsite_la_SOURCES += metrics.c
libstatsite_la_SOURCES += radix.c
libstatsite_la_SOURCES += set.c
#statsite.c
#streaming.c
libstatsite_la_SOURCES += timer.c
