include $(top_srcdir)/Makefile.am.common

statsiteincludedir=$(includedir)/statsite

statsiteinclude_HEADERS =
statsiteinclude_HEADERS += MurmurHash3.h
statsiteinclude_HEADERS += cm_quantile.h
statsiteinclude_HEADERS += config.h
statsiteinclude_HEADERS += counter.h
statsiteinclude_HEADERS += hashmap.h
statsiteinclude_HEADERS += heap.h
statsiteinclude_HEADERS += hll.h
statsiteinclude_HEADERS += hll_constants.h
statsiteinclude_HEADERS += ini.h
statsiteinclude_HEADERS += metrics.h
statsiteinclude_HEADERS += radix.h
statsiteinclude_HEADERS += set.h
statsiteinclude_HEADERS += timer.h
